[package]
name = "temage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = { version = "3.1.12", features = ["derive"] }
anyhow = "1.0.57"
reqwest = "0.11"
tokio = {version = "1.17.0", features=["full"]}
warp = "0.3.2"
open = "1"